grammar.txt
program:
    list[statement]

statement:
    if-else
    while
    func
    expression

expression:
    boolean || boolean ...
    boolean && boolean ...

boolean:
    addition == addition ...
    addition != addition ...
    addition >= addition ...
    addition <= addition ...
    addition >  addition ...
    addition <  addition ...

addition:
    term + term ...
    term - term ...

term:
    factor * factor ...
    factor / factor ...

factor:
    ! expression
    + expression
    - expression
    number
    boolean
    identifier
    ( expression )
    return expression
    identifier = expression

number:
    0 - 9

boolean:
    true
    false
